welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: '<-' expected but ')' found.
  for (i >-2 to num) {
                   ^golomb:15: error: illegal start of simple expression
    }
    ^